# lightning-hydra-template

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml  early_stopping.yaml  model_checkpoint.yaml  model_summary.yaml  rich_model_summary.yaml  tqdm_progress_bar.yaml
configs/extras/: default.yaml
configs/hydra/: default.yaml
configs/logger/: tensorboard.yaml
configs/model/: aneva.yaml
configs/model/metric_collections/: womd.yaml
configs/paths/: default.yaml
configs/trainer/: ddp_cpu.yaml  ddp_gpu.yaml  default.yaml  tpu.yaml
configs/trainer/profiler/: advanced.yaml  pytorch.yaml  simple.yaml
src/: __init__.py
src/utils/: __init__.py  build.py  logging.py  rich.py  tools.py
