[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "src"
version = "0.1.0"
description = "A general template for deep learning project."
authors = [{ name = "David Juanwu Lu", email = "juanwu@purdue.edu" }]
readme = "README.md"
license = { file = "LICENSE"}
requires-python = ">=3.8, <3.12"
dependencies = [
  "gitpython",
  "hydra-core==1.3.*",
  "hydra-colorlog==1.2.*",
  "lightning>=2.0.0",
  "rich",
  "torch>=2.0.0",
  "torchmetrics>=0.11.0",
]

[project.optional-dependencies]
dev = ["pre-commit", "pytest", "torch_tb_profiler"]

[project.urls]
"Homepage" = "https://github.com/juanwulu/lightning-hydra-template" 

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
